Update to kotlin 1.3.70

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,4 +24,4 @@ pluginManagement {
 rootProject.name = 'trikot.foundation'
 enableFeaturePreview("GRADLE_METADATA")
 
-include ':foundation'
+include ':trikotFoundation'
