--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 kotlin.code.style=official
-kotlin_version = 1.3.70
+kotlin_version=1.4-M1
 kapt.incremental.apt=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
+kotlin.js.compiler=ir
