--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-kotlin_version = 1.3.70
+kotlin_version=1.4-M3
 kapt.incremental.apt=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
