--- a/trikotFoundation/build.gradle
+++ b/trikotFoundation/build.gradle
@@ -124,7 +124,7 @@ kotlin {
 }
 
 release {
-    checkTasks = [':tasks']
-    buildTasks = [':publish']
+    checkTasks = ['check']
+    buildTasks = ['publish']
     updateVersionPart = 2
 }
