Add missing mavenLocal() repository

--- a/trikotFoundation/build.gradle
+++ b/trikotFoundation/build.gradle
@@ -9,6 +9,7 @@ plugins {
 repositories {
     google()
     jcenter()
+    mavenLocal()
     mavenCentral()
     maven { url "https://kotlin.bintray.com/kotlinx" }
     maven { url 'https://jitpack.io' }
