Migrate to gradle kts

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,4 @@ org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 org.gradle.caching=true
 kotlin.js.compiler=ir
 kotlin.js.ir.dce=true
+kotlin.mpp.stability.nowarn=true
